Additional experiemnts with inspectIT