@@ -6,14 +6,14 @@ RSCRIPTDIR=r/
 BASEDIR=./
 RESULTSDIR="${BASEDIR}tmp/results-inspectit/"
 
-SLEEPTIME=30           ## 30
-NUM_LOOPS=10           ## 10
+SLEEPTIME=0           ## 30
+NUM_LOOPS=1           ## 10
 THREADS=1              ## 1
 RECURSIONDEPTH=10      ## 10
-TOTALCALLS=2000000     ## 2000000
-METHODTIME=500000      ## 500000
+TOTALCALLS=100000     ## 2000000
+METHODTIME=0      ## 500000
 
-#MOREPARAMS="--quickstart"
+MOREPARAMS="--quickstart"
 MOREPARAMS="${MOREPARAMS}"
 
 TIME=`expr ${METHODTIME} \* ${TOTALCALLS} / 1000000000 \* 4 \* ${RECURSIONDEPTH} \* ${NUM_LOOPS} + ${SLEEPTIME} \* 4 \* ${NUM_LOOPS}  \* ${RECURSIONDEPTH} + 50 \* ${TOTALCALLS} / 1000000000 \* 4 \* ${RECURSIONDEPTH} \* ${NUM_LOOPS} `
@@ -26,7 +26,6 @@ mkdir ${RESULTSDIR}stat/
 # Clear inspectit.log and initialize logging
 rm -f ${BASEDIR}inspectit.log
 touch ${BASEDIR}inspectit.log
-mkdir ${BASEDIR}logs/
 
 RAWFN="${RESULTSDIR}raw"
 
@@ -40,9 +39,11 @@ JAVAARGS="${JAVAARGS} -verbose:gc -XX:+PrintCompilation"
 JAR="-jar OverheadEvaluationMicrobenchmark.jar"
 
 JAVAARGS_NOINSTR="${JAVAARGS}"
-JAVAARGS_LTW="${JAVAARGS} -javaagent:${BASEDIR}agent/inspectit-agent.jar -Djava.util.logging.config.file=${BASEDIR}config/logging.properties"
-JAVAARGS_INSPECTIT_MINIMAL="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/minimal/"
-JAVAARGS_INSPECTIT_FULL="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/timer/"
+JAVAARGS_LTW="${JAVAARGS} -javaagent:${BASEDIR}agent/inspectit-agent-mod.jar -Djava.util.logging.config.file=${BASEDIR}config/logging.properties"
+JAVAARGS_INSPECTIT_DISABLED="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/full/inspectit-agent.cfg -Dinspectit.disableProbe=true"
+JAVAARGS_INSPECTIT_NOSTORAGE="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/full/inspectit-agent.cfg -Dinspectit.disableStorage=true"
+JAVAARGS_INSPECTIT_NOCHARTING="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/fullNoCharting/inspectit-agent.cfg"
+JAVAARGS_INSPECTIT_FULL="${JAVAARGS_LTW} -Dinspectit.config=${BASEDIR}config/full/inspectit-agent.cfg"
 
 ## Write configuration
 uname -a >${RESULTSDIR}configuration.txt
@@ -85,10 +86,10 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
     sync
     sleep ${SLEEPTIME}
 
-    # InspectIT (minimal)
+    # InspectIT (disabled)
     k=`expr ${k} + 1`
-    echo " # ${i}.${j}.${k} InspectIT (minimal)"
-    echo " # ${i}.${j}.${k} InspectIT (minimal)" >>${BASEDIR}inspectit.log
+    echo " # ${i}.${j}.${k} InspectIT (disabled)"
+    echo " # ${i}.${j}.${k} InspectIT (disabled)" >>${BASEDIR}inspectit.log
     sar -o ${RESULTSDIR}stat/sar-${i}-${j}-${k}.data 5 2000 1>/dev/null 2>&1 &
     ${JAVABIN}java \
         -Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m -XX:+UseConcMarkSweepGC \
@@ -96,9 +97,9 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
         -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 \
         -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError \
         -server -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution \
-        -Xloggc:${BASEDIR}logs/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>>${BASEDIR}logs/out.log 2>&1 &
+        -Xloggc:${BASEDIR}tmp/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>${RESULTSDIR}cmr.log 2>&1 &
     sleep 10
-    ${JAVABIN}java  ${JAVAARGS_INSPECTIT_MINIMAL} ${JAR} \
+    ${JAVABIN}java  ${JAVAARGS_INSPECTIT_DISABLED} ${JAR} \
         --output-filename ${RAWFN}-${i}-${j}-${k}.csv \
         --totalcalls ${TOTALCALLS} \
         --methodtime ${METHODTIME} \
@@ -107,11 +108,11 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
         ${MOREPARAMS}
     kill $!
     sleep 10
+    [ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
+    [ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
     rm -rf ${BASEDIR}storage/
     rm -rf ${BASEDIR}db/
-    #[ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
-    #[ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
-    #rm -rf ${BASEDIR}logs/
+    rm -rf ${BASEDIR}logs/
     kill %sar
     [ -f ${BASEDIR}hotspot.log ] && mv ${BASEDIR}hotspot.log ${RESULTSDIR}hotspot-${i}-${j}-${k}.log
     echo >>${BASEDIR}inspectit.log
@@ -119,29 +120,10 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
     sync
     sleep ${SLEEPTIME}
 
-    # InspectIT (without CMR)
+    # InspectIT (no storage)
     k=`expr ${k} + 1`
-    echo " # ${i}.${j}.${k} InspectIT (without CMR)"
-    echo " # ${i}.${j}.${k} InspectIT (without CMR)" >>${BASEDIR}inspectit.log
-    sar -o ${RESULTSDIR}stat/sar-${i}-${j}-${k}.data 5 2000 1>/dev/null 2>&1 &
-    ${JAVABIN}java  ${JAVAARGS_INSPECTIT_FULL} ${JAR} \
-        --output-filename ${RAWFN}-${i}-${j}-${k}.csv \
-        --totalcalls ${TOTALCALLS} \
-        --methodtime ${METHODTIME} \
-        --totalthreads ${THREADS} \
-        --recursiondepth ${j} \
-        ${MOREPARAMS}
-    kill %sar
-    [ -f ${BASEDIR}hotspot.log ] && mv ${BASEDIR}hotspot.log ${RESULTSDIR}hotspot-${i}-${j}-${k}.log
-    echo >>${BASEDIR}inspectit.log
-    echo >>${BASEDIR}inspectit.log
-    sync
-    sleep ${SLEEPTIME}
-
-    # InspectIT (with CMR)
-    k=`expr ${k} + 1`
-    echo " # ${i}.${j}.${k} InspectIT (with CMR)"
-    echo " # ${i}.${j}.${k} InspectIT (with CMR)" >>${BASEDIR}inspectit.log
+    echo " # ${i}.${j}.${k} InspectIT (no storage)"
+    echo " # ${i}.${j}.${k} InspectIT (no storage)" >>${BASEDIR}inspectit.log
     sar -o ${RESULTSDIR}stat/sar-${i}-${j}-${k}.data 5 2000 1>/dev/null 2>&1 &
     ${JAVABIN}java \
         -Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m -XX:+UseConcMarkSweepGC \
@@ -149,7 +131,75 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
         -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 \
         -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError \
         -server -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution \
-        -Xloggc:${BASEDIR}logs/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>>${BASEDIR}logs/out.log 2>&1 &
+        -Xloggc:${BASEDIR}tmp/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>${RESULTSDIR}cmr.log 2>&1 &
+    sleep 10
+    ${JAVABIN}java  ${JAVAARGS_INSPECTIT_NOSTORAGE} ${JAR} \
+        --output-filename ${RAWFN}-${i}-${j}-${k}.csv \
+        --totalcalls ${TOTALCALLS} \
+        --methodtime ${METHODTIME} \
+        --totalthreads ${THREADS} \
+        --recursiondepth ${j} \
+        ${MOREPARAMS}
+    kill $!
+    sleep 10
+    [ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
+    [ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
+    rm -rf ${BASEDIR}storage/
+    rm -rf ${BASEDIR}db/
+    rm -rf ${BASEDIR}logs/
+    kill %sar
+    [ -f ${BASEDIR}hotspot.log ] && mv ${BASEDIR}hotspot.log ${RESULTSDIR}hotspot-${i}-${j}-${k}.log
+    echo >>${BASEDIR}inspectit.log
+    echo >>${BASEDIR}inspectit.log
+    sync
+    sleep ${SLEEPTIME}
+
+    # InspectIT (no charting)
+    k=`expr ${k} + 1`
+    echo " # ${i}.${j}.${k} InspectIT (no charting)"
+    echo " # ${i}.${j}.${k} InspectIT (no charting)" >>${BASEDIR}inspectit.log
+    sar -o ${RESULTSDIR}stat/sar-${i}-${j}-${k}.data 5 2000 1>/dev/null 2>&1 &
+    ${JAVABIN}java \
+        -Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m -XX:+UseConcMarkSweepGC \
+        -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseParNewGC \
+        -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 \
+        -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError \
+        -server -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution \
+        -Xloggc:${BASEDIR}tmp/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>${RESULTSDIR}cmr.log 2>&1 &
+    sleep 10
+    ${JAVABIN}java  ${JAVAARGS_INSPECTIT_NOCHARTING} ${JAR} \
+        --output-filename ${RAWFN}-${i}-${j}-${k}.csv \
+        --totalcalls ${TOTALCALLS} \
+        --methodtime ${METHODTIME} \
+        --totalthreads ${THREADS} \
+        --recursiondepth ${j} \
+        ${MOREPARAMS}
+    kill $!
+    sleep 10
+    [ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
+    [ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
+    rm -rf ${BASEDIR}storage/
+    rm -rf ${BASEDIR}db/
+    rm -rf ${BASEDIR}logs/
+    kill %sar
+    [ -f ${BASEDIR}hotspot.log ] && mv ${BASEDIR}hotspot.log ${RESULTSDIR}hotspot-${i}-${j}-${k}.log
+    echo >>${BASEDIR}inspectit.log
+    echo >>${BASEDIR}inspectit.log
+    sync
+    sleep ${SLEEPTIME}
+    
+    # InspectIT (full)
+    k=`expr ${k} + 1`
+    echo " # ${i}.${j}.${k} InspectIT (full)"
+    echo " # ${i}.${j}.${k} InspectIT (full)" >>${BASEDIR}inspectit.log
+    sar -o ${RESULTSDIR}stat/sar-${i}-${j}-${k}.data 5 2000 1>/dev/null 2>&1 &
+    ${JAVABIN}java \
+        -Xms1024m -Xmx1024m -Xmn384M -XX:MaxPermSize=128m -XX:PermSize=128m -XX:+UseConcMarkSweepGC \
+        -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseCMSInitiatingOccupancyOnly -XX:+UseParNewGC \
+        -XX:+CMSParallelRemarkEnabled -XX:+DisableExplicitGC -XX:SurvivorRatio=4 -XX:TargetSurvivorRatio=90 \
+        -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:+UseBiasedLocking -XX:+HeapDumpOnOutOfMemoryError \
+        -server -verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+PrintTenuringDistribution \
+        -Xloggc:${BASEDIR}tmp/gc.log -Dinspectit.logging.config=CMR/logging-config.xml -jar CMR/inspectit-cmr.jar 1>${RESULTSDIR}cmr.log 2>&1 &
     sleep 10
     ${JAVABIN}java  ${JAVAARGS_INSPECTIT_FULL} ${JAR} \
         --output-filename ${RAWFN}-${i}-${j}-${k}.csv \
@@ -160,11 +210,11 @@ for ((i=1;i<=${NUM_LOOPS};i+=1)); do
         ${MOREPARAMS}
     kill $!
     sleep 10
+    [ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
+    [ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
     rm -rf ${BASEDIR}storage/
     rm -rf ${BASEDIR}db/
-    #[ -f ${BASEDIR}tmp/gc.log ] && rm -f ${BASEDIR}tmp/gc.log
-    #[ -f ${RESULTSDIR}cmr.log ] && rm -f ${RESULTSDIR}cmr.log
-    #rm -rf ${BASEDIR}logs/
+    rm -rf ${BASEDIR}logs/
     kill %sar
     [ -f ${BASEDIR}hotspot.log ] && mv ${BASEDIR}hotspot.log ${RESULTSDIR}hotspot-${i}-${j}-${k}.log
     echo >>${BASEDIR}inspectit.log
@@ -176,7 +226,6 @@ done
 zip -jqr ${RESULTSDIR}stat.zip ${RESULTSDIR}stat
 rm -rf ${RESULTSDIR}stat/
 mv ${BASEDIR}inspectit.log ${RESULTSDIR}inspectit.log
-mv ${BASEDIR}logs/ ${RESULTSDIR}
 [ -f ${RESULTSDIR}hotspot-1-${RECURSIONDEPTH}-1.log ] && grep "<task " ${RESULTSDIR}hotspot-*.log >${RESULTSDIR}log.log
 [ -f ${BASEDIR}errorlog.txt ] && mv ${BASEDIR}errorlog.txt ${RESULTSDIR}
 
@@ -187,8 +236,8 @@ results_fn="${RAWFN}"
 output_fn="${RESULTSDIR}results-timeseries.pdf"
 configs.loop=${NUM_LOOPS}
 configs.recursion=c(${RECURSIONDEPTH})
-configs.labels=c("No Probe","InspectIT (minimal)","InspectIT (without CMR)","InspectIT (with CMR)")
-configs.colors=c("black","red","blue","green")
+configs.labels=c("No Probe","InspectIT (disabled)","InspectIT (no storage)","InspectIT (no charting)","InspectIT (full)")
+configs.colors=c("black","red","blue","green","pink")
 results.count=${TOTALCALLS}
 tsconf.min=(${METHODTIME}/1000)
 tsconf.max=(${METHODTIME}/1000)+300
@@ -200,8 +249,8 @@ results_fn="${RAWFN}"
 output_fn="${RESULTSDIR}results-timeseries-average.pdf"
 configs.loop=${NUM_LOOPS}
 configs.recursion=c(${RECURSIONDEPTH})
-configs.labels=c("No Probe","InspectIT (minimal)","InspectIT (without CMR)","InspectIT (with CMR)")
-configs.colors=c("black","red","blue","green")
+configs.labels=c("No Probe","InspectIT (disabled)","InspectIT (no storage)","InspectIT (no charting)","InspectIT (full)")
+configs.colors=c("black","red","blue","green","pink")
 results.count=${TOTALCALLS}
 tsconf.min=(${METHODTIME}/1000)
 tsconf.max=(${METHODTIME}/1000)+300
@@ -213,7 +262,7 @@ results_fn="${RAWFN}"
 outtxt_fn="${RESULTSDIR}results-text.txt"
 configs.loop=${NUM_LOOPS}
 configs.recursion=c(${RECURSIONDEPTH})
-configs.labels=c("No Probe","InspectIT (minimal)","InspectIT (without CMR)","InspectIT (with CMR)")
+configs.labels=c("No Probe","InspectIT (disabled)","InspectIT (no storage)","InspectIT (no charting)","InspectIT (full)")
 results.count=${TOTALCALLS}
 results.skip=${TOTALCALLS}/2
 source("${RSCRIPTDIR}stats.r")
